fix aside scrollbar

--- a/style.css
+++ b/style.css
@@ -91,7 +91,6 @@ aside img {
 aside ul {
     padding-bottom: 5px;
     padding-top: 5px;
-    overflow: auto;
     /* padding-left: 5px; */
 }
     
@@ -209,7 +208,6 @@ aside a {
 	font-size: 30px;
 }
 
-
 ul img {
     width: 30px;
 }
@@ -217,6 +215,12 @@ ul img {
 .playlist {
     /* background-color: rgb(55, 216, 55); */
     color: black;
+    padding-left: 10px;
+}
+
+.playlist-list {
+    padding-left: 10px;
+    overflow: auto;
 }
 
 /* media query */
